offloading thesis to offsite

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -302,7 +302,7 @@ author = {Kaplan, David B},
 keywords = {Astronomy & Astrophysics ; Classical and quantum physics: mechanics and fields ; Exact sciences and technology ; General ; Physical Sciences ; Physics ; Physics, Nuclear ; Physics, Particles & Fields ; Science & Technology ; Theory of quantized fields},
 issn = {0370-2693},
 }
-@article{TONG_LN,
+@misc{TONG_LN,
    title={Lattice Gauge Theory, lecture notes by David Tong},
    url={http://www.damtp.cam.ac.uk/user/tong/gaugetheory/gt.pdf},
    author={Tong, D.},
@@ -347,20 +347,7 @@ abstract = {The fixed-point (FP) action in QCD, although it is local and determi
   doi = {10.1103/PhysRevLett.81.4060},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.81.4060}
 }
-@article{HASENFRATZ199853,
-title = {Prospects for perfect actions},
-journal = {Nuclear Physics B - Proceedings Supplements},
-volume = {63},
-number = {1},
-pages = {53-58},
-year = {1998},
-note = {Proceedings of the XVth International Symposium on Lattice Field Theory},
-issn = {0920-5632},
-doi = {https://doi.org/10.1016/S0920-5632(97)00696-8},
-url = {https://www.sciencedirect.com/science/article/pii/S0920563297006968},
-author = {P. Hasenfratz},
-abstract = {The fixed-point (FP) action in QCD, although it is local and determined by classical equations, is difficult to parametrize well and is expensive to simulate. But the stake is high: the FP action has scale invariant instanton solutions, has no topological artifacts, satisfies the index theorem on the lattice, does not allow exceptional configurations, requires no tuning to get the pion massless and is expected to reduce the cut-off effects significantly. An overview is given including a discussion on tests in Yang-Mills theory, QCD and d = 2 spin and gauge models.}
-}
+
 @article{horvath1998ginsparg,
   title={Ginsparg-Wilson relation and ultralocality},
   author={Horvath, Ivan},
@@ -370,17 +357,6 @@ abstract = {The fixed-point (FP) action in QCD, although it is local and determi
   pages={4063},
   year={1998},
   publisher={APS}
-}
-@book{Gattringer:2010zz,
-    author = "Gattringer, Christof and Lang, Christian B.",
-    title = "{Quantum chromodynamics on the lattice}",
-    doi = "10.1007/978-3-642-01850-3",
-    isbn = "978-3-642-01849-7, 978-3-642-01850-3",
-    publisher = "Springer",
-    address = "Berlin",
-    volume = "788",
-    year = "2010",
-    pages = "168"
 }
 @article{Hasenfratz_1998,
    title={The index theorem in QCD with a finite cut-off},
@@ -539,20 +515,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S0370269397010071},
 author = {G. Martinelli and G.C. Rossi and C.T. Sachrajda and S. Sharpe and M. Talevi and M. Testa},
 abstract = {We propose a method to improve lattice operators composed of Wilson fermions which allows the removal of all corrections of O(a), including those proportional to the quark mass, leaving only errors of O(a2). The method exploits the fact that chiral symmetry is restored at short distances. By imposing this requirement on correlation functions of improved lattice operators at short distances, the coefficients which appear in these operators can be determined. The method is an extension of the improvement program of the Alpha collaboration, which, up to now, has only been applicable in the chiral limit. The extension to quarks with non-zero masses is particularly important for applications in heavy quark physics.}
 }
-@article{Beckett_2011,
-   title={Building the International Lattice Data Grid},
-   volume={182},
-   ISSN={0010-4655},
-   url={http://dx.doi.org/10.1016/j.cpc.2011.01.027},
-   DOI={10.1016/j.cpc.2011.01.027},
-   number={6},
-   journal={Computer Physics Communications},
-   publisher={Elsevier BV},
-   author={Beckett, Mark G. and Coddington, Paul and Joó, Bálint and Maynard, Chris M. and Pleiter, Dirk and Tatebe, Osamu and Yoshie, Tomoteru},
-   year={2011},
-   month={Jun},
-   pages={1208–1214}
-}
+
 @article{tanabashi2018review,
   title={Review of particle physics},
   author={Tanabashi, Masaharu and Hagiwara, K and Hikasa, K and Nakamura, Katsumasa and Sumino, Y and Takahashi, F and Tanaka, J and Agashe, K and Aielli, G and Amsler, Claude and others},
@@ -670,6 +633,7 @@ ADDRESS = {Philadelphia, PA}
 	number = {07},
 	pages = {081--081},
 	author = {Martin Lüscher},
+	journal = {JHEP},
 	title = {Local coherence and deflation of the low quark modes in lattice {QCD}},
 	abstract = {The spontaneous breaking of chiral symmetry in QCD is known to be linked to a non-zero density of eigenvalues of the massless Dirac operator near the origin. Numerical studies of two-flavour QCD now suggest that the low quark modes are locally coherent to a certain extent. As a consequence, the modes can be simultaneously deflated, using local projectors, with a total computational effort proportional to the lattice volume (rather than its square). Deflation has potentially many uses in lattice QCD. The technique is here worked out for the case of quark propagator calculations, where large speed-up factors and a flat scaling behaviour with respect to the quark mass are achieved.}
 }
@@ -682,6 +646,7 @@ ADDRESS = {Philadelphia, PA}
 	volume = {2003},
 	number = {05},
 	pages = {052--052},
+	journal = {JHEP},
 	author = {Martin Lüscher},
 	title = {Lattice {QCD} and the Schwarz alternating procedure},
 	abstract = {A numerical simulation algorithm for lattice QCD is described, in which the short- and long-distance effects of the sea quarks are treated separately. The algorithm can be regarded, to some extent, as an implementation at the quantum level of the classical Schwarz alternating procedure for the solution of elliptic partial differential equations. No numerical tests are reported here, but theoretical arguments suggest that the algorithm should work well also at small quark masses.}
@@ -865,14 +830,23 @@ abstract = {Heatbath methods give more rapid equilibration and shorter correlati
   doi = {10.1103/PhysRevLett.58.2394},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.58.2394}
 }
-@inbook{inbook,
-author = {Forcrand, Philippe and Jahn, Oliver},
-year = {2005},
-month = {03},
-pages = {67-73},
-title = {Monte Carlo Overrelaxation for SU(N) Gauge Theories},
-isbn = {978-3-540-21257-7},
-doi = {10.1007/3-540-28504-0_6}
+
+@misc{inbook,
+  doi = {10.48550/ARXIV.HEP-LAT/0503041},
+  
+  url = {https://arxiv.org/abs/hep-lat/0503041},
+  
+  author = {de Forcrand, Ph. and Jahn, O.},
+  
+  keywords = {High Energy Physics - Lattice (hep-lat), FOS: Physical sciences, FOS: Physical sciences},
+  
+  title = {Monte Carlo overrelaxation for SU(N) gauge theories},
+  
+  publisher = {arXiv},
+  
+  year = {2005},
+  
+  copyright = {Assumed arXiv.org perpetual, non-exclusive license to distribute this article for submissions made before January 2004}
 }
 @article{CABIBBO1982387,
 title = {A new method for updating SU(N) matrices in computer simulations of gauge theories},
@@ -1174,4 +1148,70 @@ language = {eng},
 address = {Berlin/Heidelberg},
 author = {Luescher, Martin},
 keywords = {Algorithms ; Article ; Classical and Quantum Gravitation ; Classical and Quantum Gravitation, Relativity Theory ; Complex Systems ; Mathematical and Computational Physics ; Mathematical Physics ; Physical Sciences ; Physics ; Physics - High Energy Physics - Lattice ; Physics and Astronomy ; Physics, Mathematical ; Quantum Physics ; Relativity Theory ; Science & Technology ; Statistical Physics, Dynamical Systems and Complexity ; Theoretical ; Theoretical, Mathematical and Computational Physics},
+}
+@article{PhysRevLett.94.032003,
+  title = {Topological Susceptibility in SU(3) Gauge Theory},
+  author = {Del Debbio, Luigi and Giusti, Leonardo and Pica, Claudio},
+  journal = {Phys. Rev. Lett.},
+  volume = {94},
+  issue = {3},
+  pages = {032003},
+  numpages = {4},
+  year = {2005},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.94.032003},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.94.032003}
+}
+@article{VenezianoG1979Uwi,
+issn = {0550-3213},
+abstract = {Witten's recent proposal that the U(1) problem might be solved in 1/
+N expanded QCD, is shown to be automatically consistent with expected θ dependences and anomalous Ward identities, if a (modified) Kogut-Susskind mechanism is used. Ward identities are algebraically saturated for large
+N. A sort of “partial conservation of the U(1) current” is found to hold for the “η” field.},
+journal = {Nuclear physics. B},
+pages = {213--224},
+volume = {159},
+publisher = {Elsevier B.V},
+number = {1},
+year = {1979},
+title = {U(1) without instantons},
+copyright = {1979},
+language = {eng},
+author = {Veneziano, G},
+}
+@article{WittenE1979Catf,
+issn = {0550-3213},
+abstract = {The U(1) problem is reconsidered from the point of view of the
+1
+N
+expansion. It is argued that various heuristic ideas about the η′ are valid from this point of view. Current algebra theorems, similar to soft
+π theorems, are derived for the
+η′. They are valid to lowest order in
+1
+N
+.},
+journal = {Nuclear physics. B},
+pages = {269--283},
+volume = {156},
+publisher = {Elsevier B.V},
+number = {2},
+year = {1979},
+title = {Current algebra theorems for the U(1) “Goldstone boson”},
+copyright = {1979},
+language = {eng},
+author = {Witten, E},
+}
+
+@article{HOOFT1974461,
+title = {A planar diagram theory for strong interactions},
+journal = {Nuclear Physics B},
+volume = {72},
+number = {3},
+pages = {461-473},
+year = {1974},
+issn = {0550-3213},
+doi = {https://doi.org/10.1016/0550-3213(74)90154-0},
+url = {https://www.sciencedirect.com/science/article/pii/0550321374901540},
+author = {G.'t Hooft},
+abstract = {A gauge theory with colour gauge group U(N) and quarks having a colour index running from one to N is considered in the limit N → ∞, g2N fixed. It is shown that only planar diagrams with the quarks at the edges dominate; the topological structure of the perturbation series in 1/N is identical to that of the dual models, such that the number 1/N corresponds to the dual coupling constant. For hadrons N is probably equal to three. A mathematical framework is proposed to link these concepts of planar diagrams with the functional integrals of Gervais, Sakita and Mandelstam for the dual string.}
 }
